Scale issue on mobile fixed #3

--- a/src/Styles/pagecontents.module.scss
+++ b/src/Styles/pagecontents.module.scss
@@ -35,6 +35,7 @@
   }
 
   .toggle {
+    color: var(--Tertiary);
     display: inherit;
     position: absolute;
     left: 96%;
@@ -50,7 +51,7 @@
 @media only screen and (max-width: 45rem) {
   .pagecontent {
     box-shadow: none;
-    border: 2px solid var(--Primary);
+    border: 2px solid var(--Tertiary);
     border-left: none;
   }
 }
